crates/middlenet-netrender-bridge/build_logs_bridge_v2.log
     Locking 2 packages to latest Rust 1.92.0 compatible versions
      Adding cryoglyph v0.1.0 (C:\Users\mark_\Code\repos\graphshell\vendor\cryoglyph)
      Adding gpu-allocator v0.28.0 (C:\Users\mark_\Code\repos\servo-wgpu\support\patches\gpu-allocator)
   Compiling gpu-allocator v0.28.0 (C:\Users\mark_\Code\repos\servo-wgpu\support\patches\gpu-allocator)
   Compiling stylo_taffy v0.3.0-alpha.2
   Compiling blitz-dom v0.3.0-alpha.2
   Compiling wgpu-hal v29.0.3
   Compiling blitz-html v0.3.0-alpha.2
   Compiling wgpu-core-deps-windows-linux-android v29.0.3
   Compiling wgpu-core v29.0.3
   Compiling wgpu v29.0.3
   Compiling cryoglyph v0.1.0 (C:\Users\mark_\Code\repos\graphshell\vendor\cryoglyph)
   Compiling netrender_device v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender_device)
   Compiling vello v0.8.0 (https://github.com/linebender/vello?branch=main#ac0a35b4)
   Compiling iced_wgpu v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\wgpu)
   Compiling netrender v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender)
   Compiling netrender_text v0.0.1 (C:\Users\mark_\Code\repos\webrender-wgpu\netrender_text)
   Compiling middlenet-netrender-bridge v0.0.1 (C:\Users\mark_\Code\repos\graphshell\crates\middlenet-netrender-bridge)
   Compiling iced_renderer v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\renderer)
   Compiling iced_widget v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced\widget)
   Compiling iced v0.15.0-dev (C:\Users\mark_\Code\repos\graphshell\vendor\iced)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `blitz_traits`
  --> examples\smoke_html_paint.rs:34:5
   |
34 | use blitz_traits::shell::{ColorScheme, Viewport};
   |     ^^^^^^^^^^^^ use of unresolved module or unlinked crate `blitz_traits`
   |
   = help: if you wanted to use a crate named `blitz_traits`, use `cargo add blitz_traits` to add it to your `Cargo.toml`

error[E0432]: unresolved import `middlenet_netrender_bridge::html_paint`
  --> examples\smoke_html_paint.rs:35:33
   |
35 | use middlenet_netrender_bridge::html_paint::paint_html_document;
   |                                 ^^^^^^^^^^ could not find `html_paint` in `middlenet_netrender_bridge`

warning: unused import: `Document`
  --> examples\smoke_html_paint.rs:32:17
   |
32 | use blitz_dom::{Document, DocumentConfig};
   |                 ^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
warning: `middlenet-netrender-bridge` (example "smoke_html_paint") generated 1 warning
error: could not compile `middlenet-netrender-bridge` (example "smoke_html_paint") due to 2 previous errors; 1 warning emitted
